# django-structure

./: .gitignore  readme.md  requirements.txt
management/: celery_app.py  envreadme.md  linkedin_post.txt  manage.py  pyproject.toml  removeapp.py
management/apps/accounts/: urls.py  views.py
management/apps/authentication/: admin.py  apps.py  backends.py  models.py  schema.py  serializers.py  urls.py  utils.py  views.py
management/apps/config/: __init__.py  asgi.py  middleware.py  urls.py  wsgi.py
management/apps/config/management/commands/: clear_database.py  createapp.py  fixmigrations.py  moveapp.py  removeapp.py  renameapp.py
management/apps/config/settings/: __init__.py  base.py  development.py  production.py  staging.py
management/apps/config/settings/components/: __init__.py  caching.py  celery.py  database.py  email.py  logging.py  rest.py  security.py
management/apps/config/urls/: __init__.py  admin.py  api.py  base.py
management/apps/config/utils/: app_discovery.py
management/apps/config/utils/email/: services.py
management/templates/: base.html
management/templates/authentication/: password_reset_confirm.html
management/templates/emails/: base_email.html  welcome_email.html
