[tool.poetry]
name = "management"
version = "0.1.0"
description = "Management System"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
amqp = "^5.3.1"
annotated-types = "^0.7.0"
asgiref = "^3.8.1"
attrs = "^25.3.0"
billiard = "^4.2.1"
celery = "^5.5.1"
cffi = "^1.17.1"
click = "^8.1.8"
click-didyoumean = "^0.3.1"
click-plugins = "^1.1.1"
click-repl = "^0.3.0"
cryptography = "^44.0.2"
dj-database-url = "^2.3.0"
django = "^5.2"
django-browser-reload = "^1.18.0"
django-celery-beat = "^2.8.0"
django-celery-results = "^2.6.0"
django-cors-headers = "^4.7.0"
django-debug-toolbar = "^5.1.0"
django-timezone-field = "^7.1"
djangorestframework = "^3.16.0"
djangorestframework-simplejwt = "^5.4.0"
drf-spectacular = "^0.28.0"
ecdsa = "^0.19.1"
gunicorn = "^23.0.0"
inflection = "^0.5.1"
jsonschema = "^4.23.0"
kombu = "^5.5.3"
packaging = "^25.0"
platformdirs = "^4.3.7"
prompt-toolkit = "^3.0.51"
psycopg2-binary = "^2.9.10"
pyasn1 = "^0.4.8"
pydantic = "^2.11.3"
pydantic-core = "^2.33.1"
pydantic-settings = "^2.9.1"
pyjwt = "^2.10.1"
python-crontab = "^3.2.0"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.1.0"
python-jose = "^3.4.0"
pyyaml = "^6.0.2"
redis = "^5.2.1"
referencing = "^0.36.2"
rpds-py = "^0.24.0"
rsa = "^4.9.1"
six = "^1.17.0"
sqlparse = "^0.5.3"
typing-extensions = "^4.13.2"
typing-inspection = "^0.4.0"
tzdata = "^2025.2"
uritemplate = "^4.1.1"
vine = "^5.1.0"
wcwidth = "^0.2.13"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
coverage = "^7.8.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
mccabe = "^0.7.0"
mypy-extensions = "^1.1.0"
pathspec = "^0.12.1"
pluggy = "^1.5.0"
pycodestyle = "^2.13.0"
pyflakes = "^3.3.2"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = "test_*.py"
testpaths = ["tests"]